cli/tests/snapshot/snapshots/snapshot__eval_stderr_spanned_toml.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the value of `name`
  ┌─ [INPUTS_PATH]/errors/spanned_toml.ncl:5:18
  │
5 │   package.name | String,
  │                  ------ expected type
  │
  ┌─ [IMPORTS_PATH]/package.toml:2:8
  │
2 │ name = 5
  │        ^ applied to this expression
